src/test/ui/did_you_mean/issue-34337.stderr
error[E0596]: cannot borrow immutable local variable `key` as mutable
  --> $DIR/issue-34337.rs:6:14
   |
LL |     get(&mut key);
   |              ^^^
   |              |
   |              cannot reborrow mutably
   |              try removing `&mut` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
